--- a/frontend/app/components/SearchForm/SearchForm.css
+++ b/frontend/app/components/SearchForm/SearchForm.css
@@ -1,10 +1,3 @@
-/* src/components/SearchForm.css */
-.search-section {
-  background-color: white;
-}
-
-
-
 .search-form-container h2 {
   font-size: 1.1em;
   margin-top: 0;
@@ -31,28 +24,32 @@
 }
 
 .search-input {
-  width: calc(100% - 20px);
-  padding: 10px;
-  border: 1px solid #ccc;
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #dcdcdc;
   border-radius: 4px;
   margin-bottom: 20px;
-  font-size: 1em;
+  font-size: 9px;
 }
 
 .search-button {
-  background-color: #dcdcdc; /* Gray from image */
-  color: #777;
-  padding: 12px 25px;
+  background-color: #28a745; 
+  color: white;
+  padding: 5px;
   border: none;
-  border-radius: 4px;
-  font-size: 1em;
+  border-radius: 10px;
+  font-size: 12px;
   cursor: pointer;
   width: 100%;
   font-weight: bold;
-  letter-spacing: 1px;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
 }
 
-.search-button:hover {
-  background-color: #c9c9c9;
+.search-button:disabled {
+  background-color: #dcdcdc; /* Gray out the button when disabled */
+  cursor: not-allowed;
 }
 
