Creating the results list component

--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -1,8 +1,5 @@
 @import "tailwindcss";
 
-
-
-
 body {
   font-family: Montserrat;
   background-color: #dcdcdc ;
@@ -12,7 +9,7 @@ body {
 
 .app-container {
   background-color: #dcdcdc;
-  max-width: 100%;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -34,16 +31,22 @@ body {
 }
 
 .search-section {
+  width: 30%;
   padding: 15px;
   border-right: 1px solid #eee;
   background-color: white;
   margin: 15px 15px 176px 104px;
+  border-radius: 10px;
+  box-shadow: 0 0.5px 1px 0 #848484bf;
 }
 
 .results-section {
+  width: 40%;
   background-color: white;
   margin: 15px 105px 0 15px;
-   padding: 15px 15px 149.5px;
+  padding: 15px 15px 149.5px;
+  border-radius: 10px;
+  box-shadow: 0 0.5px 1px 0 #848484bf;
 }
 
 .error-message {
