--- a/frontend/app/components/SearchResults/SearchResults.css
+++ b/frontend/app/components/SearchResults/SearchResults.css
@@ -1,5 +1,5 @@
 .results-header {
-  border-bottom: 1px solid #dcdcdc;
+  border-bottom: 1px solid #c4c4c4;
   margin-bottom: 10px;
   padding-bottom: 5px;
   font-weight: bold;
@@ -18,7 +18,6 @@
 }
 
 .results-content {
-  min-height: 150px; /* Give some height even with no results */
   display: flex;
   justify-content: center;
   align-items: center;
