--- a/frontend/app/components/SearchResults/SearchResults.css
+++ b/frontend/app/components/SearchResults/SearchResults.css
@@ -3,7 +3,7 @@
   margin-bottom: 10px;
   padding-bottom: 5px;
   font-weight: bold;
-  font-size: large;
+  font-size: 16px;
 }
 
 .search-results-container {
