css and positioning fix

--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -40,7 +40,7 @@ body {
 
 .results-section {
   background-color: white;
-  padding: 15px 15px 149.5px;
+  padding: 15px;
   border-radius: 10px;
   box-shadow: 0 0.5px 1px 0 #848484bf;
 }
